Changed to full deck, fixed dealer's 2nd card animation clipping

--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -12,7 +12,8 @@
     100% { transform: translateX(0) translateY(0); }
 }
 
-@keyframes flip-card {
+
+@keyframes flip-dealer-hidden-card {
     0% {
         transform: rotateY(180deg);
         background-color: $red;
@@ -29,13 +30,19 @@
         border: solid 0.25rem $white;
         }
     50.1% {
-            background-color: $white;
-            border: none;
-            height: 5.5rem;
-            width: 3.5rem;
+        background-color: $white;
+        border: none;
+        height: 5.5rem;
+        width: 3.5rem;
         }
-    
     100% {transform: rotateY(0deg);}
+}
+
+// Specific animation for the elements of dealer's hidden card
+@keyframes reveal-elements {
+    0% {opacity: 0;}
+    50% {opacity: 0;}
+    50.1% {opacity: 1;}
 }
 
 .hand {
@@ -76,14 +83,18 @@
                 & .suit,
                 & .rank,
                 & .middle-suit {
-                    height: 0.75rem;
-                    padding: 0.125rem 0rem;
                     visibility: hidden;
                 }
             }
 
             &.visible {
-                animation: flip-card 1s ease-in-out
+                animation: flip-dealer-hidden-card 1s ease-in-out;
+
+                & .suit,
+                & .rank,
+                & .middle-suit {
+                    animation: reveal-elements 1s ease-in-out;
+                }
             }
         }
         
@@ -96,7 +107,6 @@
             height: 2.5rem;
             align-self: center;
             justify-self: center;
-            // height: auto;
             margin: auto
         }
 
@@ -109,7 +119,7 @@
 
             & .suit {
                 height: 0.75rem;
-                // padding: 0.125rem 0rem;
+                padding: 0.125rem 0rem 0rem;
             }
         }
 
@@ -121,7 +131,8 @@
         & .bottom-right-corner {
             justify-self: flex-end;
             align-self: flex-end;
-            transform: rotate(180deg) scaleX(1)
+            transform: rotate(180deg) scaleX(1);
+            // padding-top: 0.25rem;
         }
 
         &:nth-child(n) {
